# FinalYear_Projec

./: .env  ARCHITECTURAL_UPGRADE.md  IMPLEMENTATION_GUIDE.md  README.md  SERVICES_AUDIT_REPORT.md  db.sqlite3  requirements.txt
backend/: .env.example  .gitignore  PHASE1_STEP1_SUMMARY.md  README.md  REPOSITORY_GUIDE.md  SERVICE_LAYER_GUIDE.md  __init__.py  alembic.ini  docker-compose.yml  fix_all_types.py  fix_sqlalchemy_types.py  fix_type_annotations.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: __init__.py  config.py  database.py  exception_handlers.py  exceptions.py  logging_config.py  security.py
backend/app/middleware/: __init__.py  exception_handler.py
backend/app/models/: __init__.py  academic.py  assessment.py  assessment_results.py  audit.py  base.py  feedback.py  leave.py  notification.py  staff.py  student.py  user.py
backend/app/repositories/: __init__.py  academic.py  assignment.py  attendance.py  base.py  factory.py  feedback.py  leave.py  notification.py  quiz.py  staff.py  student.py  user.py
backend/app/schemas/: __init__.py  academic.py  assessment.py  assignment.py  attendance.py  auth.py  feedback.py  filters.py  leave.py  notification.py  staff.py  student.py  user.py
backend/app/services/: __init__.py  academic_service.py  analytics_service.py  assessment_service.py  assignment_service.py  attendance_service.py  auth_service.py  base.py  email_service.py  feedback_service.py  file_service.py  (+8 more)
backend/docker/: Dockerfile
backend/migrations/: alembic.ini  env.py
backend/tests/: __init__.py
(+191 files in other folders)
